[tool.poetry]
name = "learntube-assessment"
version = "0.1.0"
description = ""
authors = ["siddhantgaba <sidhantgaba@ideaclan.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.14"
uvicorn = "^0.35.0"
redis = "^6.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
